# agenticops-chat

./: .env.example  .gitignore  06-Reporter-Agent-Design.md  CLAUDE.md  RAW-Idea-latest-v3.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.kiro/settings/: lsp.json
Ideas/: codeX.idea.md
config/: channels.yaml.example  im-apps.yaml.example
docs/: DESIGN.md  REQUIREMENTS.md  TASKS.md  WORKFLOW.md  agent-vision-and-evolution.md  architecture-discussion.md  technical-spec.md  web_service_workflow.md
docs/cases/: case-1-oom.md  case-10-service-deleted.md  case-2-bad-image.md  case-3-network-policy.md  case-4-node-disk-pressure.md  case-5-pod-pending.md  case-6-unhealthy-targets.md  case-7-coredns-down.md  case-8-pvc-pending.md  case-9-hpa-maxed.md  case-cross-service.md  cost-report.md
docs/designs/: phase2a-rca-agent.md  phase2b-reporter-agent.md
docs/reviews/: phase2a-rca-agent-review.md
docs/use-cases/: use-case-6-eks-lab-auto-fix-pipeline.md
infra/eks-chaos-lab/: cleanup.sh  cluster.yaml  setup.sh
infra/eks-lab/: cluster.yaml  docs.sh  setup.sh  teardown.sh  verify.sh
scripts/: test_html_report_email.py
skills/: ADDING_SKILLS.md
skills/aws-compute/: SKILL.md
skills/aws-storage/: SKILL.md
skills/database-admin/: SKILL.md
skills/distributed-tracing/: SKILL.md
skills/elasticsearch/: SKILL.md
tests/: __init__.py  conftest.py  test_auto_fix_pipeline.py  test_aws_cli_tool.py  test_detail_level.py  test_detect.py  test_detector.py  test_eks_tools.py  test_graph_algorithms.py  test_kb.py  test_l4_e2e.py  test_models.py  test_multimodal.py  test_network_tools.py  test_notification_operator.py  test_rca_tools.py  test_report_tools.py  test_rules.py  test_sre_agent.py  test_state_machine.py
(+322 files in other folders)
